@@ -1,0 +1,8 @@
+/*
+ * Only present to manage exceptions for Design System website ONLY
+ * DO NOT USE IT 
+ */
+
+.navigation__link {
+  padding: .75rem 1rem .75rem 3rem;
+}
