@@ -89,7 +89,7 @@ body {
 
 
 .navigation__link {
-  padding: .75rem 1rem .75rem 3rem;
+  padding: .75rem 1rem .75rem 1.5rem;
   line-height: 1.3;
   color:  var(--color-nav-link, $pm-global-light);
   text-decoration: none;
