@@ -5,6 +5,7 @@
 - updated `hr` color
 - updated `flex-items-end` helper and added example (renamed it, was `flex-item-end`, not consistent)
 - fixed color of ProtonMail version text
+- fixed navigation padding (added partial `exceptions` ONLY for Design System website)
 
 
 # [1.6.13] - 2019-06-04
